Update GitHub Actions Java versions
Test with Java 8, 11, 13, 16 and 17-ea
Update Lombok to latest version for tests to work on Java 16+